--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/SOTBIZZ.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/SOTBIZZ.jpg" type="image/svg+xml">
 
   <!-- 
     - custom css link
@@ -151,18 +151,17 @@
           <div class="about-content">
 
             <h2 class="h2 section-title underline">Why Our Agency</h2>
-
+             
+            <h3>How We Can Help You
+              Achieve Your Business Goal</h3>
             <p class="about-text">
-              In dictum aliquam turpis lacinia iaculis. Fusce vel malesuada magna. Nulla vel maximus risus. Donec
-              volutpat metus
-              lacinia risus accumsan, ac bibendum libero efficitur. Pellentesque nec nisi sit amet magna tempus
-              hendrerit ut a odio.
+              At SOTbizz, our skilled IT team has been doing this for seven whole years. We're here to help your business soar. Let us be the ones to make your big goals happen. With our know-how and teamwork, we promise to go above and beyond what you expect. Choose SOTbizz – where seven years of success meets your dreams for a thriving business!
             </p>
-
+              
+            <h3>MD. Ashikur Rahman Saaki</h3>
+            <h4>Managing Director</h4>
             <p class="about-text">
-              Praesent rhoncus commodo tortor, id pulvinar nisl blandit at. Nulla facilisi. Quisque turpis ante,
-              vehicula condimentum
-              arcu.
+              If u initiate to do business, Have to put something on the table!! We just have to choose which item and which customers!! Lets make a biggest communityright path!
             </p>
 
             <ul class="stats-list">
