--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                       Ashikur Rahman Saaki
                     </a>
                   </h3>
-                    <h3>Maneging Derector</h3>
+                    <h3>Maneging Director</h3>
                   <p class="text">
                     If u initiate to do business, Have to put something on the table!! We just have to choose which item and which customers!! Lets make a biggest community right path !
                   </p>
