--- a/index.html
+++ b/index.html
@@ -744,9 +744,9 @@
             </div>
 
             <div>
-              <a href="tel:+2484214313" class="footer-item-link">+8801676263911</a>
-              <a href="tel:+2486871365" class="footer-item-link">+8801672873242</a>
-              <a href="tel:+2486871365" class="footer-item-link">+8801601605556</a>
+              <a href="tel:+8801676263911" class="footer-item-link">+8801676263911</a>
+              <a href="tel:+8801672873242" class="footer-item-link">+8801672873242</a>
+              <a href="tel:+8801601605556" class="footer-item-link">+8801601605556</a>
             </div>
 
           </li>
@@ -759,7 +759,7 @@
 
             <div>
               <!-- <a href="mailto:info@desinic.com" class="footer-item-link">info@desinic.com</a> -->
-              <a href="mailto:help@desinic.com" class="footer-item-link">sotbizz00@gmail.com</a>
+              <a href="mailto:sotbizz00@gmail.com" class="footer-item-link">sotbizz00@gmail.com</a>
             </div>
 
           </li>
